[package]
name = "toy_os"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[[bin]]
name = "toy_os"
test = false
bench = false
